0.6.0
- setupCMFSite() now accepts a 'products' argument which allows to specify
  a list of products that will be added to the portal by running their
  Extensions.Install.install() functions.
- Removed setupCMFSkins() and the ability to setup a CMF site w/o skins.
- Added a FunctionalTestCase convenience class.
- Made the ZopeTestCase.utils module available as CMFTestCase.utils.

0.5.0
- Package for testing CMF-based products and applications. 
