@@ -1,6 +1,1 @@
-CMFTestCase 0.6.0
-(c) 2003-2004, Stefan H. Holek, stefan@epy.co.at
-http://zope.org/Members/shh/CMFTestCase
-License: ZPL
-Zope: 2.5-2.8
-
+0.6.0
